<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UAEMerchant</string>
    
    <string name="categories_text">Categories</string>
    
    <string name="car_number_plates_txt">Car Number Plates</string>
    <string name="mobile_phone_numbers_txt">Mobile Phone Numbers</string>
    <string name="electronics_txt">Electronics</string>
    <string name="car_and_engines_txt">Car Engines</string>
    <string name="real_estate_sale_txt">Real Estate(Sale)</string>
    <string name="real_estate_rent_txt">Real Estate(Rent)</string>
    <string name="ladies_only_txt">Ladies Only</string>
    <string name="services_txt">Services</string>
    <string name="furniture_txt">Furniture</string>
    <string name="others_txt">Others</string>
    <string name="pets_txt">Pets</string>
    <string name="city_spinner_prompt">City</string>
    <string name="category_spinner_prompt">Category</string>
    
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="sale">Sale</string>
    <string name="rent">Rent</string>
    <string name="cancel">Cancel</string>
    <string name="title_hint">Title</string>
    <string name="price_hint">Price</string>
    <string name="address_hint">Address</string>
    
    <string name="location_txt">Location</string>
    <string name="description_txt">Description</string>
    
    <string name="post_btn">Post</string>
    <string name="edit_btn">Edit</string>
    <string name="save_btn">Save</string>
    <string name="account_title">Account</string>
    <string name="post_ad_title">Post Ad</string>
    <string name="item_list_title">Items List</string>
    <string name="item_details_title">Item Details</string>
    <string name="register_title">Register</string>
    <string name="register_btn">Register</string>
    
    <string name="loading">Loading...</string>
    
    <string name="no_thanks">No Thanks</string>
    <string name="register_msg">You need to register to post your ads</string>
    <string name="add_pictures">Add pictures</string>
    <string name="no_post_ad">No, post ad</string>
    <string name="add_pictures_msg">Would you like to add pictures to the ad?</string>
    
    <string name="location_msg">Unable to get your location</string>
    <string name="try_again">Try again</string>
    <string name="post_anyway">Post Anyway</string>
    
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="city">City</string> 
    <string name="photos">Photos</string>
    
    <string name="by">By: </string>
    <string name="date">Date: </string>
    
    
    

    <!-- IN APP BILLING -->
    <string name="cannot_connect_title">Can\'t connect to Market</string>
    <string name="cannot_connect_message">This app cannot connect to Market.
     Your version of Market may be out of date.
     You can continue to use this app but you
     won\'t be able to make purchases.</string>
    <string name="billing_not_supported_title">Can\'t make purchases</string>
    <string name="billing_not_supported_message">The Market billing
     service is not available at this time.  You can continue to use this app but you
     won\'t be able to make purchases.</string>
    <string formatted="false" name="help_url">http://market.android.com/support/bin/answer.py?answer=1050566&amp;hl=%lang%&amp;dl=%region%</string>
    <string name="learn_more">Learn more</string>
    
</resources>