<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/account_dialog"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/backgourndImg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        />
    
    <RelativeLayout
        android:id="@+id/titleParent"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/title_background" >

        <Button
            android:id="@+id/btnCategories"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/categories_text"
            android:background="@drawable/img_btn_back" 
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/account_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_bg"
            android:text="@string/edit_btn" 
            android:textColor="@android:color/white"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/mainParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/profile_bg" >

        <RelativeLayout
            android:id="@+id/block1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="95dp" >

            <TextView
                android:id="@+id/nameHeadingTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/emailHeadingTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameHeadingTxt"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/phoneHeadingTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailHeadingTxt"
                android:layout_marginTop="15dp"
                android:text="@string/phone"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/cityHeadingTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneHeadingTxt"
                android:layout_marginTop="15dp"
                android:text="@string/city"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/block1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/block1" >

            <TextView
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:singleLine="true"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/emailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTxt"
                android:layout_marginTop="15dp"
                android:text=""
                android:singleLine="true"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/phoneTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTxt"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:text=""/>

            <TextView
                android:id="@+id/cityTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneTxt"
                android:layout_marginTop="15dp"
                android:text=""
                android:singleLine="true"
                android:textColor="@android:color/darker_gray" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>