<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/post_dialog"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/backgourndImg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background" />

    <RelativeLayout
        android:id="@+id/titleParent"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/title_background" >

        <Button
            android:id="@+id/btnCategories"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/img_btn_back"
            android:gravity="center"
            android:text="@string/categories_text"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/post_ad_title"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/postBtn"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_bg"
            android:text="@string/post_btn"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainParent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleParent"
        android:layout_marginTop="20dp" >

        <RelativeLayout
            android:id="@+id/block1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >

            <EditText
                android:id="@+id/titleInput"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:hint="@string/title_hint"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/block1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" >

            <Spinner
                android:id="@+id/categoryInput"
                style="?android:attr/editTextStyle"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:clickable="true"
                android:drawSelectorOnTop="true"
                android:prompt="@string/category_spinner_prompt"
                android:scrollbars="none"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignRight="@id/categoryInput"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/combo_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/block2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/priceInput"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:hint="@string/price_hint"
                android:inputType="number|textPhonetic"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/block3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" >

            <Spinner
                android:id="@+id/cityInput"
                style="?android:attr/editTextStyle"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:clickable="true"
                android:drawSelectorOnTop="true"
                android:prompt="@string/city_spinner_prompt"
                android:scrollbars="none"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignRight="@id/cityInput"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/combo_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/block4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" >
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/block5"
            android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/locationHeadingTxt"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:text="@string/location_txt"
                android:textColor="@android:color/black" />

            <ToggleButton
                android:id="@+id/locationInput"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/locationHeadingTxt"
                android:background="@drawable/toggle_button_selector"
                android:checked="true"
                android:gravity="center"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/block6"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/descriptionHeadingTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:text="@string/description_txt"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_below="@id/descriptionHeadingTxt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:maxLines="4" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>