<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/app_name"
        
        />

    <RelativeLayout
        android:id="@+id/titleParent"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/title_background" >

        <Button
            android:id="@+id/btnAccount"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/nav_btn_img2" />

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/categories_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnPostAd"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_bg"
            android:text="@string/post_btn" 
            android:textColor="@android:color/white"/>
    </RelativeLayout>

    
     <RelativeLayout
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/adMobParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone" >

        <!-- <com.google.ads.AdView
            android:id="@+id/ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="a15093a33a88df9"
            ads:loadAdOnCreate="true" /> -->
    </RelativeLayout>
    
    
    <ScrollView
        android:id="@+id/mainParentScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleParent"
        android:layout_above="@id/adMobParent"
        android:scrollbars="none" >
        

        <RelativeLayout
            android:id="@+id/mainParent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/btnCarNumberPlate"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/car_plate" />
                

            <Button
                android:id="@+id/btnMobilePhoneNumbers"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@id/btnCarNumberPlate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/mobile_phone" />

            <Button
                android:id="@+id/btnElectronics"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@id/btnMobilePhoneNumbers"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/electronics" />

            <Button
                android:id="@+id/btnCarAndEngines"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@id/btnElectronics"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/cars_engines" />

            <Button
                android:id="@+id/btnRealEstate"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@id/btnCarAndEngines"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/real_estate" />

            <Button
                android:id="@+id/btnLadiesOnly"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@id/btnRealEstate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/ladies_only" />

            <Button
                android:id="@+id/btnServices"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@id/btnLadiesOnly"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/services" />

            <Button
                android:id="@+id/btnFurniture"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@id/btnServices"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/furniture" />

            <Button
                android:id="@+id/btnPets"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@id/btnFurniture"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/pets" />
            
            <Button
                android:id="@+id/btnOthers"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@id/btnPets"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/others" />
            
        </RelativeLayout>
    </ScrollView>
       
</RelativeLayout>